--- a/styles/screen.css
+++ b/styles/screen.css
@@ -155,7 +155,7 @@ html.casper .site-header-content {
     justify-content: center;
     align-items: center;
     padding: 6vw 3vw;
-    min-height: 200px;
+    /* min-height: 200px; */
     max-height: 340px;
 }
 
